limit height of orga list to 75vh to avoid scrollbar (dis)appearing when filtering the long list

--- a/frontend/stylesheets/main.less
+++ b/frontend/stylesheets/main.less
@@ -654,3 +654,7 @@ button.narrow {
   margin-bottom: 10px;
   margin-top: -14px; // wanted margin - modal padding = 10-24
 }
+
+.organization-switch-menu > ul {
+  height: 75vh;
+}
